scripts/manifest/projets/autoscaler/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autoscaler
  annotations:
    ingress: enabled
  labels:
    ingress: enabled
