scripts/manifest/projets/autoscaler/Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler
  namespace: autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoscaler
  template:
    metadata:
      labels:
        app: autoscaler
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: autoscaler
      containers:
      - name: autoscaler-container
        image: ghcr.io/castrogne/k8s_vagrant:latest
        imagePullPolicy: Always
