scripts/manifest/projets/autoscaler/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: autoscaler
  namespace: autoscaler
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: autoscaler
