scripts/manifest/projets/autoscaler/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-famille-paquin
  namespace: autoscaler
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.famille-paquin.fr
    - famille-paquin.fr
    secretName: famille-paquin-fr-self-tls
  rules:
    - host: www.famille-paquin.fr
      http:
        paths:
          - path: /cars
            pathType: ImplementationSpecific
            backend:
              service:
                name: autoscaler
                port:
                  number: 8080
          - path: /actuator
            pathType: ImplementationSpecific
            backend:
              service:
                name: autoscaler
                port:
                  number: 8080
